<resources>
    <string name="app_name">UT3_TresEnRaya_GuillermoRN</string>
    <string name="txttitulo">TRES EN RAYA</string>
    <string name="bt1jugador">1 JUGADOR</string>
    <string name="bt2jugadores">2 JUGADORES</string>
    <string name="rbfacil">Fácil</string>
    <string name="rbdificil">Difícil</string>
    <string name="rbextremo">Extremo</string>
    <string name="txttablero">TABLERO</string>
    <string name="btnpartidas">PARTIDAS</string>
    <string name="btnranking">RANKING</string>
    <string name="tituloPartidas">Partidas</string>
    <string name="tituloRanking">RANKING</string>
    <string name="cabecerapartidas">ID_PART -- JUG1  --  JUG2  --  DIFICULTAD  --  RESULTADO</string>
    <string name="cabeceraranking">USUARIO  --  PARTIDAS  --  PUNTOS</string>
    <string name="hintnombreusu">Introduce el nombre de usuario:</string>
    <string name="tituloultimapartida">ULTIMA PARTIDA JUGADA</string>
    <string name="menuranking">RANKING</string>
    <string name="menuultimapartida">ULTIMA PARTIDA</string>
    <string name="menupartidas">PARTIDAS</string>
    <string name="iniciomenu">INICIO</string>
</resources>