<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#828A5F"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txttitulo"
            android:textColor="#DDB9B9"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUnJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="inicioJuego"
                android:text="@string/bt1jugador"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDosJugadores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="inicioJuego"
                android:text="@string/bt2jugadores"
                android:textSize="20sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/nombreUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hintnombreusu"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroupDificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbFacil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/rbfacil"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbDificil"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/rbdificil"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbExtremo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/rbextremo"
                    android:textSize="27sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtTablero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txttablero"
        android:textColor="#EFD697"
        android:textSize="48sp"
        android:textStyle="bold" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="289dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        app:columnCount="3"
        app:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="toqueCasilla"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </androidx.gridlayout.widget.GridLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="?attr/editTextBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPartidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#F4CDCD"
            android:backgroundTint="#EFADAD"
            android:onClick="actPartidas"
            android:text="@string/btnpartidas"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:onClick="actRanking"
            android:text="@string/btnranking" />

        <ImageButton
            android:id="@+id/btnSonido"
            android:layout_width="30dp"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"

            android:background="#A3BABF"
            android:onClick="activar_des_sonido"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
</LinearLayout>